complete general layout of page with minimal styling

--- a/index.html
+++ b/index.html
@@ -10,13 +10,105 @@
 <body>
     <div class="container">
         <div class="sidebar">
-
+            <h1>Dashboard</h1>
+            <p>Home</p>
+            <p>Profile</p>
+            <p>Messages</p>
+            <p>History</p>
+            <p>Tasks</p>
+            <p>Communites</p>
+            <p>Settings</p>
+            <p>Support</p>
+            <p>Privacy</p>
         </div>
         <div class="topbar">
+            <div>
+                <input type="text" placeholder="">
+            </div>
+            <div>
 
+            </div>
         </div>
         <div class="content">
-
+         <h2>Your projects</h2>
+         <span></span>
+         <h2>Announcements</h2>
+         <div>
+             <h2>header</h2>
+             <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                  RTX, TI-80 texas insturments, Triple A duracell battery 
+                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+            </p>
+         </div>
+         <div>
+            <h2>header</h2>
+            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                 RTX, TI-80 texas insturments, Triple A duracell battery 
+                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+           </p>
+        </div>
+        <div>
+            <h2>header</h2>
+            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                 RTX, TI-80 texas insturments, Triple A duracell battery 
+                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+           </p>
+        </div>
+        <div>
+            <h2>header</h2>
+            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                 RTX, TI-80 texas insturments, Triple A duracell battery 
+                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+           </p>
+        </div>
+        <div>
+            <h2>header</h2>
+            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                 RTX, TI-80 texas insturments, Triple A duracell battery 
+                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+           </p>
+        </div>
+        <div class="contentside">
+            <div class="announcements">
+                <div>
+                <h3>stuff</h3>
+                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                     RTX, TI-80 texas insturments, Triple A duracell battery 
+                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
+               </p>
+            </div>
+            <div>
+                <h3>stuff</h3>
+                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                     RTX, TI-80 texas insturments, Triple A duracell battery 
+                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
+               </p>
+            </div>
+            <div>
+                <h3>stuff</h3>
+                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                     RTX, TI-80 texas insturments, Triple A duracell battery 
+                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
+               </p>
+            </div>
+            </div>
+            <h2>Trending</h2>
+            <div class="trending">
+               
+            </div>
+        </div>
+        <div>
+            <h2>header</h2>
+            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
+                 RTX, TI-80 texas insturments, Triple A duracell battery 
+                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
+                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
+           </p>
         </div>
     </div>
 </body>
