--- a/index.html
+++ b/index.html
@@ -11,15 +11,28 @@
     <div class="container">
         <div class="sidebar">
             <h1>Dashboard</h1>
+        <div>
+            <img src="./Assets/home-variant.png">
             <p>Home</p>
+            <img src="./Assets/card-account-details-outline.png">
             <p>Profile</p>
+            <img src="./Assets/message-settings.png">
             <p>Messages</p>
+            <img src="./Assets/clock-time-eight-outline.png">
             <p>History</p>
+            <img src="./Assets/note-multiple.png">
             <p>Tasks</p>
+            <img src="./Assets/account-group.png">
             <p>Communites</p>
+        </div>
+        <div>
+            <img src="./Assets/cog.png">
             <p>Settings</p>
+            <img src="./Assets/help-box.png">
             <p>Support</p>
+            <img src="./Assets/shield-lock.png">
             <p>Privacy</p>
+        </div>
         </div>
         <div class="topbar">
             <div>
