--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container">
         <div class="sidebar">
-            <h1>Dashboard</h1>
+            <div class="header">
+                <img src="./Assets/code-tags.png">
+                <h1>Dashboard</h1>
+            </div>
         <div>
             <img src="./Assets/home-variant.png">
             <p>Home</p>
@@ -53,6 +56,11 @@
                   ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                   Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
             </p>
+            <div class="cardbottom">
+                <img src="./Assets/star-plus-outline.png">
+                <img src="./Assets/eye-plus-outline.png">
+                <img src="./Assets/source-fork.png">
+            </div>
          </div>
          <div>
             <h2>header</h2>
@@ -61,6 +69,11 @@
                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
            </p>
+           <div class="cardbottom">
+            <img src="./Assets/star-plus-outline.png">
+            <img src="./Assets/eye-plus-outline.png">
+            <img src="./Assets/source-fork.png">
+        </div>
         </div>
         <div>
             <h2>header</h2>
@@ -69,6 +82,11 @@
                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
            </p>
+           <div class="cardbottom">
+            <img src="./Assets/star-plus-outline.png">
+            <img src="./Assets/eye-plus-outline.png">
+            <img src="./Assets/source-fork.png">
+        </div>
         </div>
         <div>
             <h2>header</h2>
@@ -77,6 +95,11 @@
                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
            </p>
+           <div class="cardbottom">
+            <img src="./Assets/star-plus-outline.png">
+            <img src="./Assets/eye-plus-outline.png">
+            <img src="./Assets/source-fork.png">
+        </div>
         </div>
         <div>
             <h2>header</h2>
@@ -85,6 +108,11 @@
                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
            </p>
+           <div class="cardbottom">
+            <img src="./Assets/star-plus-outline.png">
+            <img src="./Assets/eye-plus-outline.png">
+            <img src="./Assets/source-fork.png">
+        </div>
         </div>
         <div class="contentside">
             <div class="announcements">
@@ -122,6 +150,11 @@
                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
            </p>
+           <div class="cardbottom">
+            <img src="./Assets/star-plus-outline.png">
+            <img src="./Assets/eye-plus-outline.png">
+            <img src="./Assets/source-fork.png">
+        </div>
         </div>
     </div>
 </body>
