finish but with a lot of bugs

--- a/index.html
+++ b/index.html
@@ -38,11 +38,22 @@
         </div>
         </div>
         <div class="topbar">
-            <div>
+                <img src="./Assets/magnify.png">
                 <input type="text" placeholder="">
-            </div>
+                <img src="./Assets/bell-ring-outline.png">
+                <img src="./Assets/prof1.jpg">
+                <h2>Alejandro Gutierrez</h2>
+                <div class="topbar2">
+                    <img src="./Assets/prof1.jpg">
+                    <div>
+                        <p>Hi there,</p>
+                        <h1>Alejandro Gutierrez (@Jando)</h1>
+                    </div>
+                    <button>New</button>
+                    <button>Upload</button>
+                    <button>Share</button>
+                </div>
             <div>
-
             </div>
         </div>
         <div class="content">
@@ -50,12 +61,10 @@
          <span></span>
          <h2>Announcements</h2>
          <div>
-             <h2>header</h2>
-             <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                  RTX, TI-80 texas insturments, Triple A duracell battery 
-                  ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                  Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-            </p>
+             <h2>Lorem ipsum</h2>
+             <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+                dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+             </p>
             <div class="cardbottom">
                 <img src="./Assets/star-plus-outline.png">
                 <img src="./Assets/eye-plus-outline.png">
@@ -63,12 +72,10 @@
             </div>
          </div>
          <div>
-            <h2>header</h2>
-            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                 RTX, TI-80 texas insturments, Triple A duracell battery 
-                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-           </p>
+            <h2>Lorem ipsum</h2>
+             <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+                dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+             </p>
            <div class="cardbottom">
             <img src="./Assets/star-plus-outline.png">
             <img src="./Assets/eye-plus-outline.png">
@@ -76,12 +83,10 @@
         </div>
         </div>
         <div>
-            <h2>header</h2>
-            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                 RTX, TI-80 texas insturments, Triple A duracell battery 
-                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-           </p>
+            <h2>Lorem ipsum</h2>
+            <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+               dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+            </p>
            <div class="cardbottom">
             <img src="./Assets/star-plus-outline.png">
             <img src="./Assets/eye-plus-outline.png">
@@ -89,12 +94,10 @@
         </div>
         </div>
         <div>
-            <h2>header</h2>
-            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                 RTX, TI-80 texas insturments, Triple A duracell battery 
-                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-           </p>
+            <h2>Lorem ipsum</h2>
+            <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+               dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+            </p>  
            <div class="cardbottom">
             <img src="./Assets/star-plus-outline.png">
             <img src="./Assets/eye-plus-outline.png">
@@ -102,12 +105,10 @@
         </div>
         </div>
         <div>
-            <h2>header</h2>
-            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                 RTX, TI-80 texas insturments, Triple A duracell battery 
-                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-           </p>
+            <h2>Lorem ipsum</h2>
+            <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+               dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+            </p>
            <div class="cardbottom">
             <img src="./Assets/star-plus-outline.png">
             <img src="./Assets/eye-plus-outline.png">
@@ -117,39 +118,53 @@
         <div class="contentside">
             <div class="announcements">
                 <div>
-                <h3>stuff</h3>
-                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                     RTX, TI-80 texas insturments, Triple A duracell battery 
-                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
-               </p>
+                <h3>Lorem ipsum</h3>
+                <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                 </p>
             </div>
             <div>
-                <h3>stuff</h3>
-                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                     RTX, TI-80 texas insturments, Triple A duracell battery 
-                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
-               </p>
+                <h3>Lorem ipsum</h3>
+                <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                 </p>
             </div>
             <div>
-                <h3>stuff</h3>
-                <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                     RTX, TI-80 texas insturments, Triple A duracell battery 
-                     ultrapower100 Cargador Compatible iPhone 1A 5 W 1400
-               </p>
+                <h3>Lorem ipsum</h3>
+                <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                 </p>
             </div>
             </div>
             <h2>Trending</h2>
             <div class="trending">
-               
+               <img src="./Assets/prof1.jpg">
+               <div>
+                   <h4>@Jando</h4>
+                   <p>always coding</p>
+               </div>
+               <img src="./Assets/prof2.jpg">
+               <div>
+                   <h4>@AleChess</h4>
+                   <p>just push pawns</p>
+               </div>
+               <img src="./Assets/prof3.jpg">
+               <div>
+                   <h4>@alex.sk8s</h4>
+                   <p>learning everyday</p>
+               </div>
+               <img src="./Assets/profilepic.jpg">
+               <div>
+                   <h4>@StusslyRL</h4>
+                   <p>GC2 and climbing</p>
+               </div>
             </div>
         </div>
         <div>
-            <h2>header</h2>
-            <p>Caught you in 8K UHD surround sound 16 Gigs ram, HDR GEFORCE
-                 RTX, TI-80 texas insturments, Triple A duracell battery 
-                 ultrapower100 Cargador Compatible iPhone 1A 5 W 1400 + 
-                 Cable 100% 1 Metro Blanco Compatible iPhone 5 5 C 5S 6 SE
-           </p>
+            <h2>Lorem ipsum</h2>
+            <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
+               dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+            </p>
            <div class="cardbottom">
             <img src="./Assets/star-plus-outline.png">
             <img src="./Assets/eye-plus-outline.png">
