--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
          <h2>Announcements</h2>
          <div>
              <h2>Lorem ipsum</h2>
-             <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
-                dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
+             <p>This isn't a real website. I created this mock dashboard to practice css grid.
+                 Even though css grid should't be used as a replacement for flexbox, I still made 
+                 it my personal goal to avoid using flexbox throughtout this entire page.
              </p>
             <div class="cardbottom">
                 <img src="./Assets/star-plus-outline.png">
@@ -120,19 +121,19 @@
                 <div>
                 <h3>Lorem ipsum</h3>
                 <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
-                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
                  </p>
             </div>
             <div>
                 <h3>Lorem ipsum</h3>
                 <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
-                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
                  </p>
             </div>
             <div>
                 <h3>Lorem ipsum</h3>
                 <p>dolor sit amet, consectetur adipiscing elit. Fusce fermentum hendrerit nibh, vitae cursus ipsum elementum quis. Vivamus
-                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse...
+                    dictum nisi purus, eget lobortis lacus consectetur eget. Suspendisse vehicula velit vitae nibh tempus, eu imperdiet sapien dapibus. 
                  </p>
             </div>
             </div>
@@ -141,22 +142,22 @@
                <img src="./Assets/prof1.jpg">
                <div>
                    <h4>@Jando</h4>
-                   <p>always coding</p>
+                   <p>Some Information</p>
                </div>
                <img src="./Assets/prof2.jpg">
                <div>
-                   <h4>@AleChess</h4>
-                   <p>just push pawns</p>
+                   <h4>@SomeUser</h4>
+                   <p>Some Information</p>
                </div>
                <img src="./Assets/prof3.jpg">
                <div>
-                   <h4>@alex.sk8s</h4>
-                   <p>learning everyday</p>
+                   <h4>@SomeUser</h4>
+                   <p>Some Information</p>
                </div>
                <img src="./Assets/profilepic.jpg">
                <div>
-                   <h4>@StusslyRL</h4>
-                   <p>GC2 and climbing</p>
+                   <h4>@SomeUser</h4>
+                   <p>Some Information</p>
                </div>
             </div>
         </div>
